--- a/aboutUs .html
+++ b/aboutUs .html
@@ -89,7 +89,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Todo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutUs .html">About</a>
+                        <a class="nav-link" href="#">About US</a>
                     </li>
                 </ul>
             </div>
@@ -99,24 +99,19 @@
 
 <main>
     <div class="container content-container">
-        <h1>Filthy Animals !!!</h1>
 
-        <h3>From file organization, to dirty laundry, that stinky old fridge, or that unsanitary bathroom. We do it all!!</h3>
-        <p>"Staying organized is crucial for achieving success and maintaining a
-            balanced life. When we're organized, we're better equipped to manage our
-            time effectively, prioritize tasks, and meet deadlines. Organization
-            helps reduce stress and anxiety by providing clarity and structure to
-            our daily lives. It allows us to streamline workflows, increase
-            productivity, and achieve goals more efficiently. Additionally, being
-            organized fosters better decision-making and enhances our ability to
-            adapt to changing circumstances. Whether it's in our personal or
-            professional lives, staying organized empowers us to stay focused,
-            remain proactive, and ultimately lead more fulfilling and rewarding
-            lives."
+            <h2>Crafting Excellence Since 2008</h2>
+            Once upon a time, in the bustling heart of Brroklyn, a dream was born. It was the year 2008, and a group of passionate individuals came together with a singular vision: to redefine excellence in peoples lives.
+            Our journey began humbly, in a small workshop tucked away in the charming alleys of Flatbush. Fuelled by a shared love for organization and an unwavering commitment to quality, we embarked on a mission to carve our mark in the world.
+            In those early days, every creation was a labor of love. With meticulous attention to detail and a dedication to craftsmanship, we poured our hearts into each piece, striving to exceed expectations and ignite the spark of delight in our customers' eyes.
+            As word of our craftsmanship spread, so did our ambitions. We expanded our horizons, embracing innovation while staying true to our roots. From the traditional techniques passed down through generations to the cutting-edge technologies of tomorrow, we embraced the evolution of our craft with open arms.
+            2021 marked a significant milestone in our journey. It was the year we took our passion beyond the confines of our workshop and opened our doors to the world. With our humble storefront, we welcomed fellow enthusiasts and curious souls alike, inviting them to experience firsthand the magic of Filthy Animal's.
+            Through the years, we've weathered storms and celebrated triumphs. We've grown in size and stature, but our commitment to excellence remains unshaken. Every interaction, every creation, is a testament to our unwavering dedication to our craft and our community.
+            Today, as we stand on the threshold of tomorrow, we carry with us the lessons of our past and the dreams of our future. With gratitude in our hearts and passion in our souls, we continue to push the boundaries of what's possible, driven by the belief that the pursuit of excellence is a journey without end.
+            Join us as we write the next chapter of our story—a chapter filled with creativity, innovation, and the relentless pursuit of perfection. Together, let's dare to dream, dare to create, and dare to be extraordinary.
+            Welcome to the world of "Filthy Animals". Welcome to a legacy of excellence.
+            
         </p>
-
-        Book with us now Before its too late and your suitting in a pile of y
-        0our own filth
     </div>
 </main>
 
@@ -145,7 +140,7 @@
                     <!-- Bootstrap JavaScript Libraries -->
                     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-                           </div>
+                    <script src=""></script>       </div>
                     
 </body>
 </html>
