--- a/todo.html
+++ b/todo.html
@@ -15,24 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-    <style>
-      .custom-card {
-        width: 20rem;
-        border: 1px solid rgb(13, 83, 127);
-      }
-      .btn-round {
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        padding: 0;
-        text-align: center;
-        line-height: 50px;
-      }
 
-      .big-icon {
-        font-size: 3em; /* Adjust the size as needed */
-      }
-    </style>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <div class="container d-flex justify-content-center mt-5">
