--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Todo</a>
+                        <a class="nav-link active" aria-current="page" href="./todo.html">Todo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutUs .html">About</a>
