--- a/new_todo.html
+++ b/new_todo.html
@@ -23,12 +23,17 @@
             <option value="aston">Ian Aston</option>
             <option value="grace">Siddaile Grace</option>
           </select>
-
-          <label for="selectCategory">Category</label>
         </form>
       </div>
-    </main>
 
-    <div></div>
+      <div class="container mt-5">
+        <form>
+          <label for="prioritySelect">Priority</label>
+          <select name="priority" id="prioritySelect">Select
+            
+          </select>
+        </form>
+      </div>
+      <script src="new_todo.js"></script>
   </body>
 </html>
