--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <main>
     <div class="container content-container">
-        <h1>Filthy Animals !!!</h1>
+        <h1>Filthy Animals</h1>
 
         <h3>From file organization, to dirty laundry, that stinky old fridge, or that unsanitary bathroom. We do it all!!</h3>
         <p>"Staying organized is crucial for achieving success and maintaining a
